# trikz

./: .gitignore  Cargo.toml  LICENSE-MIT
examples/: blockdiag.rs
src/: anchor.rs  attributes.rs  circle.rs  color.rs  into_svg.rs  lib.rs  rectangle.rs  stroke.rs  style.rs  svg.rs  svgutils.rs  transform.rs
src/elements/: arrow.rs  circle.rs  document.rs  line.rs  marker.rs  mod.rs  path.rs  path_elem.rs  rectangle.rs
src/elements/path/: mod.rs  section.rs  segment.rs
src/nodes/: circle.rs  mod.rs  rectangle.rs
src/style/: color.rs  font.rs  mod.rs  stroke.rs  transform.rs
