[package]
authors = ["PopcornPaws"]
name = "trikz"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/PopcornPaws/trikz"
description = "Placeholder for trikz, a tikz-like drawing library"

[dependencies]
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
svglib = { package = "svg", version = "0.13" }
