[package]
authors = ["PopcornPaws"]
name = "trikz"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/PopcornPaws/trikz"
description = "Placeholder for trikz, a tikz-like drawing library"

[features]
pdf = ["svg2pdf"]

[dependencies]
hex = "0.4"
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
svg = "0.13"
svg2pdf = { version = "0.5", optional = true }
